--- a/apps/web/src/features/hypernative/components/HnSecurityReportBtn/styles.module.css
+++ b/apps/web/src/features/hypernative/components/HnSecurityReportBtn/styles.module.css
@@ -1,5 +1,5 @@
 .hypernativeIcon {
-  margin-right: 0;
+  margin-right: -3px;
   margin-left: 0;
 }
 
